styles/scss/vtex.modal-layout.scss
@import "./references";

@media screen and (min-width: 40em) {
  .paper--quickview {
    height: 260px;
    width: 580px;
  }

  .actionsContainer--quickview {
    padding: 0 2rem 2rem 2rem;
  }
}

@media screen and (min-width: 50em) {
  .paper--quickview {
    height: 450px;
    width: 900px;
  }
}
.paperScrollContent {
  max-height: 100% !important;
}

@media screen and (min-width: 75em) {
  .paper--quickview {
    width: calc(100% - 4rem);
    height: auto;
  }
}

@media screen and (min-width: 82em) {
  .actionsContainer--quickview {
    padding: 0 2.5rem 2.5rem 2.5rem;
  }
}

.paper--quickview {
  min-width: 320px;
  max-width: 96rem;
}

.headerContainer--quickview {
  border: none;
  position: absolute;
  right: 0;
}

.actionsContainer--quickview {
  height: 100%;
  width: 100%;
  transition: box-shadow 150ms ease-in-out, border-top 150ms ease-in-out;
  border-top-style: solid;
  border-top-width: 1px;
  border-top-color: transparent;
  box-shadow: -4px 0px 27px -12px transparent;
}

.actionsContentWrapper {
  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: #aaa;
  padding-top: 1.5rem;
}

.contentContainer--quickviewContent {
  padding: 2.5rem 2.5rem 2.5rem 2rem;
  overflow-x: hidden;
  /*:global(.vtex-store-components-3-x-interestRatePrice) {
    position: relative;
    &::after {
      background-image: url(https://gbarbosa.vteximg.com.br/arquivos/cred.png);
      background-repeat: no-repeat;
      display: inline-block;
      width: 57px;
      height: 44px;
      content: "";
      left: 80px;
      position: absolute;
      top: -24px;
    }
  }*/
  :global(.vtex-button) {
    width: 50%;
    background-color: #f6f6f6;
    border: none;
    padding: 0.5em;
    color: $primary;
    display: flex;
    justify-content: center;
    align-items: center;
    :global(.vtex-button__label) {
      padding-left: 0;
      :global(.vtex-add-to-cart-button-0-x-buttonText) {
        display: flex;
        align-items: center;
      }
    }
  }
  :global(.vtex-store-components-3-x-productNameContainer) {
    font-size: 30px;
    color: $primary;
  }
  :global(.vtex-store-components-3-x-priceContainer) {
    margin: 5px 0;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
  }
  :global(.vtex-store-components-3-x-savingPrice) {
    width: 100%;
    margin: 0;
  }
  :global(.vtex-product-identifier-0-x-product-identifier--skuReferenceId) {
    font-size: 12px;
  }
  :global(.vtex-store-components-3-x-sellingPriceLabel),
  :global(.vtex-store-components-3-x-listPriceLabel) {
    display: none;
  }
  :global(.vtex-store-components-3-x-price_sellingPrice) {
    font-size: 27px;
    color: $primary;
    padding: 0;
    margin-right: 0.5em;
  }
  :global(.vtex-store-components-3-x-listPriceValue) {
    padding: 0;
    margin-right: 0.5em;
    color: #969696;
  }
  :global(.vtex-product-quantity-1-x-summaryContainer) {
    margin: 2em 0;
    :global(.vtex-product-quantity-1-x-quantitySelectorContainer) {
      flex-direction: row;
    }
    :global(.vtex-numeric-stepper__input) {
      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
      border: 0;
      width: 50px;
      outline: none;
    }
    :global(.vtex-numeric-stepper__plus-button),
    :global(.vtex-numeric-stepper__minus-button) {
      background: transparent;
      border: 0;
    }
    :global(.vtex-product-quantity-1-x-quantitySelectorTitle) {
      margin: auto 0;
      margin-right: 10px;
      font-size: 18px;
      color: #000;
    }
  }
}

.triggerContainer--quickview {
  padding: 0.75rem;
}

.triggerContainer {
  outline: none;
}

.actionsContainer--quickview:not(.actionsContainerEndOfContent--quickview) {
  border-top-color: rgb(238, 238, 238);
  box-shadow: -4px 0px 27px -12px rgba(0, 0, 0, 0.64);
}

.actionsContainer--quickview:not(.actionsContainerEndOfContent--quickview)
  .actionsContentWrapper {
  border-top-color: transparent;
}

.actionsContainer {
  :global(.vtex-store-link-0-x-link) {
    background: #f6f6f6 !important;
    color: #333 !important;
    border: 0;
  }
}

.closeButton {
  padding-right: 1rem;
}

.paper--product-gifts {
  padding: 1.5rem;
}

:global(.vtex-modal-layout-0-x-closeButton) {
  color: #fff;
  font-weight: 300;
  width: 100px;
  position: absolute;
  right: 0px;
  background: #da221c;
  border: none;
  padding: initial;
  z-index: 999;
  &:hover {
    background-color: #da221c;
    color: #fff;
  }
}

:global(.vtex-store-components-3-x-productBrand--quickview) {
  color: #333;
}

.paper--modal-covid-,
.paper--modal-super-parrilleros {
  width: 70vw;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 1rem;
}

.paper--modal-covid--last,
.paper--modal-super-parrilleros-last {
  padding-top: 2rem;
  width: 90vw;
  @media screen and (max-width: em(768px)) {
    width: 100%;
    margin: 0;
  }
}

:global(.vtex-rich-text-0-x-container--wlt-title-link-modal) {
  :global(.vtex-rich-text-0-x-paragraph) {
    font-size: 26px;
    cursor: pointer;
    margin-bottom: 0;
    color: #0071ce;
  }
}

:global(.vtex-rich-text-0-x-container--title-modal) {
  :global(.vtex-rich-text-0-x-paragraph--title-modal) {
    margin: 0;
  }
  font-size: 21px;
  font-weight: bold;
}

:global(.vtex-rich-text-0-x-container--subtitle-modal) {
  :global(.vtex-rich-text-0-x-paragraph--subtitle-modal) {
    margin-bottom: 0;
  }
  font-size: 17px;
  color: #000000;
  opacity: 1;
}

:global(.vtex-rich-text-0-x-container--content-modal) {
  font-size: 14px;
  color: #000000;
  opacity: 1;
}

:global(.vtex-rich-text-0-x-wrapper--footer-ultima-actualizacion) {
  :global(.vtex-rich-text-0-x-paragraph--content-modal) {
    margin-top: 2rem;
  }
}

.closeButton--modal-btn-close {
  color: #0071ce;
  background: none;
  top: 2px;
  right: -31px;
  font-weight: 300;
  width: 100px;
  position: absolute;
  border: none;
  padding: initial;
  z-index: 999;
}

.closeButton--modal-btn-close:hover {
  color: #0071ce;
  background: none;
}

.headerContainer--modal-btn-close {
  border: none;
}

// :global(.vtex-store-components-3-x-imageElement--wlt-img-banner_hoy){
//   width: 90%;
//   margin-left: 3rem;
// }

/* Modal cart  */
.paper--cart-io {
  padding: 40px 60px;
  border-radius: 15px;
  max-width: 1174px;
  margin: 0;
  padding-top: 0;
  .closeButton {
    background: none;
    visibility: visible;
    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='icon_close' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='Grupo_1749' data-name='Grupo 1749'%3E%3Cpath id='Caminho_7109' data-name='Caminho 7109' d='M0,0H24V24H0Z' fill='none'/%3E%3C/g%3E%3Cg id='Grupo_1751' data-name='Grupo 1751'%3E%3Cg id='Grupo_1750' data-name='Grupo 1750'%3E%3Cpath id='Caminho_7110' data-name='Caminho 7110' d='M18.3,5.71h0a1,1,0,0,0-1.41,0L12,10.59,7.11,5.7a1,1,0,0,0-1.41,0h0a1,1,0,0,0,0,1.41L10.59,12,5.7,16.89a1,1,0,0,0,0,1.41h0a1,1,0,0,0,1.41,0L12,13.41l4.89,4.89a1,1,0,0,0,1.41,0h0a1,1,0,0,0,0-1.41L13.41,12,18.3,7.11A1,1,0,0,0,18.3,5.71Z' fill='%23898989'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
      no-repeat;
    width: 45px;
    height: 45px;
    margin-top: 10px;
    .closeIcon {
      display: none;
    }
  }
}
.triggerContainer--cart-io {
  background: #ed1d25;
  color: #fff;
  padding: 10px;
  border-radius: 5px;
  margin: 0;
  font-weight: bold;
  font-size: 14px;
  height: 41px;
  width: 100%;
  margin-top: 7px;
  cursor: pointer;
}
/* Modal cart end */

